--- a/src/components/WindowTable/window-table.component.pug
+++ b/src/components/WindowTable/window-table.component.pug
@@ -1,5 +1,5 @@
 // @import .scss => styles
-div(className='{cx(styles.root, containerStyle)}')
+div(className='{cx(styles.root, containerStyle, this.props.cellStyle)}')
   table(className='{styles.table}', border='{0}', cellPadding='{0}', cellSpacing='{0}', ref='{this.tableRef}')
     tbody
       tr
